minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auth
  name: keycloak
spec:
  defaultBackend:
    service:
      name: keycloak
      port:
        number: 8080
  rules:
    - host: auth.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: application
  name: web-api
spec:
  defaultBackend:
    service:
      name: oauth2-proxy
      port:
        number: 4180
  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
          - path: /q/health
            pathType: Prefix
            backend:
              service:
                name: web-api
                port:
                  number: 9000
